# talos-governance-agent

./: .gitignore  Dockerfile  README.md  RUNBOOK.md  governance_agent.db  pyproject.toml  test_e2e.db
.agent/: README.md
.agent/agents/design/: brand-guardian.md  ui-designer.md  ux-researcher.md  visual-storyteller.md  whimsy-injector.md
.agent/agents/engineering/: ai-engineer.md  backend-architect.md  devops-automator.md  frontend-developer.md  mobile-app-builder.md  rapid-prototyper.md
.agent/agents/marketing/: app-store-optimizer.md  content-creator.md  growth-hacker.md  instagram-curator.md  reddit-community-builder.md  tiktok-strategist.md  twitter-engager.md
.agent/agents/product/: feedback-synthesizer.md  sprint-prioritizer.md  trend-researcher.md
.agent/agents/project-management/: experiment-tracker.md  project-shipper.md  studio-producer.md
.agent/agents/studio-operations/: analytics-reporter.md  finance-tracker.md  infrastructure-maintainer.md  legal-compliance-checker.md  support-responder.md
.agent/agents/testing/: api-tester.md  performance-benchmarker.md  test-results-analyzer.md  tool-evaluator.md  workflow-optimizer.md
.agent/workflows/: README.md
.agent/workflows/development/: run-dashboard.md  tga-workflow.md  update-readme.md
.agent/workflows/style-guides/: readme-style.md
.github/workflows/: ci.yml
src/talos_governance_agent/: main.py
src/talos_governance_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/talos_governance_agent/adapters/: mcp_server.py  memory_state_store.py  (+1 more)
tests/: test_governance.py
(+7 files in other folders)
