[project]
name = "talos-governance-agent"
version = "0.1.0"
description = "Talos Governance Agent (TGA) for secure tool execution supervision"
dependencies = [
    "pydantic>=2.0.0",
    "fastecdsa>=2.3.0",
    "cryptography>=41.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
