[project]
name = "talos-governance-agent"
version = "0.1.0"
description = "Talos Governance Agent (TGA) for secure tool execution supervision"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "fastecdsa>=2.3.0",
    "cryptography>=41.0.0",
    "mcp[cli]>=1.0.0",
    "PyJWT>=2.8.0",
    "jsonschema>=4.17.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
check_untyped_defs = true
ignore_missing_imports = true
